interface/deployment-interface.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface-deployment
  labels:
    app: interface
spec:
  replicas: 2
  selector:
    matchLabels:
      app: interface
  template:
    metadata:
      labels:
        app: interface
    spec:
      containers:
        - name: interface
          imagePullPolicy: IfNotPresent
          image: freskessa/interface:1
