interface/service-interface.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface-service
  labels:
    app: interface
spec:
  type: ClusterIP
  selector:
    app: interface
  ports:
    - port: 80
      targetPort: 8081
