interface/ingress-interface.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interface-ingress
  labels:
    app: interface
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interface-service
                port:
                  number: 80
